# scribe

./: .gitignore  dune-project  scribe.opam
lib/: command.ml  dune  file.ml  index.ml  syscall.ml
test/: dune  test_scribe.ml
